Update French and Russian translations to 26062021

--- a/hartshorn-i18n/src/main/resources/hartshorn/translations_ru.properties
+++ b/hartshorn-i18n/src/main/resources/hartshorn/translations_ru.properties
@@ -15,102 +15,93 @@
 # along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
 #
 
-minecraft.enchant.infinity=Бесконечность
-minecraft.enchant.protection.projectile=Защита от снарядов
-minecraft.enchant.knockback=Отбрасывание
-minecraft.enchant.protection.fire=Огнестойкость
-minecraft.enchant.depthstrider=Подводная ходьба
-minecraft.enchant.aquaaffinity=Родство с водой 
-minecraft.enchant.featherfalling=Невесомость 
-minecraft.enchant.sealuck=Морская удача
-minecraft.enchant.protection.blast=Взрывоустойчивость
-minecraft.enchant.baneofarthopods=Бич членистоногих
-minecraft.enchant.binding=Проклятие утраты
-minecraft.enchant.fireaspect=Заговор огня 
-minecraft.enchant.vanishing=Проклятие исчезновения 
-minecraft.enchant.protection=Защита
-minecraft.enchant.lure=Приманка
-minecraft.enchant.mending=Починка
-minecraft.enchant.respiration=Подводное дыхание
-minecraft.enchant.smite=Небесная кара 
-minecraft.enchant.looting=Добыча
-minecraft.enchant.sharpness=Острота
-minecraft.enchant.thorns=Шипы
-minecraft.enchant.flame=Воспламенение
-minecraft.enchant.power=Сила
-minecraft.enchant.sweeping=Разящий клинок
-minecraft.enchant.unbreaking=Прочность
-minecraft.enchant.efficiency=Эввективность
-minecraft.enchant.punch=Откидывание
-minecraft.enchant.frostwalker=Ходьба по воде 
-minecraft.enchant.fortune=Удача
-minecraft.enchant.silktouch=Шелковое касание
-hartshorn.exception=$4{0}
-prefix=$3[] $1
-caught=$Произошла ошибка. $3{0}
-source.unknown=Неизвестно
-caught.reference.lost=$Ссылка на объект потерена
 caught.failedbinding=$4Нельзя применить к этому типу
-oldplots.caught.calculation=$4Не удалось вычислить местоположения участка 
-oldplots.list.hover=$2Телепортироватся к $1{0}$2, $1{1}, {2}
-oldplots.list.single=$3 - $1{0}$2, $1{1}, {2}
-oldplots.caught.plot=$4Не удалось найти участок с этим ID 
-oldplots.caught.worlds=$4Миры не хранятся как OldPlots
-oldplots.caught.player=$4Не предоставлен действительный игрок
-oldplots.caught.location=$4Никакая локация мира не настроена для '{0}'
-oldplots.list.title=$1OldPlots для $2{0}
+caught.reference.lost=$Ссылка на объект потерена
+caught=$Произошла ошибка. $3{0}
+command.confirm.hover=$1Подтвердите запущенную команду
+command.confirm=$1Эта команда требует подтверждения, нажмите $2[здесь] $1чтобы подтвердить
+command.cooldown=Вы можете использовать эту команду только каждые 5 минут
+command.flag.unknown=Неизвестная отметка '{0}'
+command.illegal=незаконное определение параметра
+command.missing.arguments=$4Для этой команды необходимы параметры
+command.missing.executor=Для команды '{0}' с {1} параметрами не зарегестрированно исполнителей
+command.missing.handler=Не найдено поддержываемых обработчиков команд для '{0}'
+command.overflow=$4Слишком много параметров
+command.parameter.missing.arguments=$4Не достаточно параметров для '{0}'
+command.parse.failure=Could not parse {0} '{1}'
+dave.mute=$4Дэйв приглушен, но имейте в виду, что важные триггеры всегда будут видны
+dave.reload=$1Дэйв  был перезагружен и ничего не сломалось, ура!
 dave.suggestion.link.hover=$2Нажмите, чтобы открыть $1{0}
+dave.suggestion.link=Вот полезная ссылка, $1{0}
+dave.trigger.header=$1Триггеры
 dave.trigger.notfound=$4Не существует триггера с ID '{0}'.
 dave.trigger.single.hover=$1Нажмите, чтобы выполнить триггер
-dave.suggestion.link=Вот полезная ссылка, $1{0}
 dave.unmute=$1Вы теперь сможете получать сообщения от Дэйва
-dave.reload=$1Дэйв  был перезагружен и ничего не сломалось, ура!
-dave.trigger.header=$1Триггеры
-dave.discord.format=**Дэйв** ≫ {0}
-dave.mute=$4Дэйв приглушен, но имейте в виду, что важные триггеры всегда будут видны
-dave.trigger.single=$3 - $1{0}
-hartshorn.reload.single=$1Успешно перезагружен '$2{0}$1'
-hartshorn.info.service.unknown=$4Не удалось найти услугу с ID '{0}'
-i18n.lang.updated.other=$1Язык игрока $2{0} $1был переключен на: $2{1}
-hartshorn.confirm.invalid.id=$4Не удалось подтвердить команду: Не действительный ID
-i18n.lang.updated=$1Ваш предпочтенный язык был переключен на: $2{0}
-hartshorn.confirm.invalid.other=$4Не удалось подтвердить команду
-hartshorn.info.service.hover=$2Подробности для '$1{0}$2'
+discord.command.caught=Извините, я не смог запустить эту команду. Пожалуйсто сообщите в наш канал поддержки, Support.
+discord.command.not.permitted=Вам не разрешено использовать эту команду!
+discord.command.unknown=Извините, я не знаю эту команду!
 hartshorn.confirm.invalid.source=$4Эта команда может быть использована только опознаваемыми источниками (игроки, консоль) соответствуя изначальному источнику команды
-hartshorn.info.parameter.missing=$4Отсутствует значение для параметра '{0}'
-hartshorn.pagination.title=$1Hartshorn Server Info
-hartshorn.info.authors=$2Авторы$3: $1{0}
-hartshorn.info.services=$2Услуги$3:
 hartshorn.info.header=$2Hartshorn $3($1Версия$3: $1{0}$3)
+hartshorn.info.service.hover=$2Подробности для '$1{0}$2'
+hartshorn.info.service.unknown=$4Не удалось найти услугу с ID '{0}'
+hartshorn.info.services=$2Услуги$3:
 hartshorn.invalid.source=$4Эта команда может быть использована только игроками
-hartshorn.info.service.row=$3 - $1{0} $3- $2{1}
-hartshorn.reload.single.fail=$4Не удалось перезагрузить '{0}'
+hartshorn.pagination.title=$1Hartshorn Server Info
 hartshorn.reload.all=$1Все услуги успешно перезагружены 
+hartshorn.reload.single.fail=$4Не удалось перезагрузить '{0}'
+hartshorn.reload.single=$1Успешно перезагружен '$2{0}$1'
 hashtag.wrong_format=Паттерн должен быть форматирован как #type[arg1][arg2][etc.]
+i18n.lang.updated.other=$1Язык игрока $2{0} $1был переключен на: $2{1}
+i18n.lang.updated=$1Ваш предпочтенный язык был переключен на: $2{0}
+minecraft.enchant.aquaaffinity=Родство с водой 
+minecraft.enchant.baneofarthopods=Бич членистоногих
+minecraft.enchant.binding=Проклятие утраты
+minecraft.enchant.depthstrider=Подводная ходьба
+minecraft.enchant.efficiency=Эввективность
+minecraft.enchant.featherfalling=Невесомость 
+minecraft.enchant.fireaspect=Заговор огня 
+minecraft.enchant.flame=Воспламенение
+minecraft.enchant.fortune=Удача
+minecraft.enchant.frostwalker=Ходьба по воде 
+minecraft.enchant.infinity=Бесконечность
+minecraft.enchant.knockback=Отбрасывание
+minecraft.enchant.looting=Добыча
+minecraft.enchant.lure=Приманка
+minecraft.enchant.mending=Починка
+minecraft.enchant.power=Сила
+minecraft.enchant.protection.blast=Взрывоустойчивость
+minecraft.enchant.protection.fire=Огнестойкость
+minecraft.enchant.protection.projectile=Защита от снарядов
+minecraft.enchant.protection=Защита
+minecraft.enchant.punch=Откидывание
+minecraft.enchant.respiration=Подводное дыхание
+minecraft.enchant.sealuck=Морская удача
+minecraft.enchant.sharpness=Острота
+minecraft.enchant.silktouch=Шелковое касание
+minecraft.enchant.smite=Небесная кара 
+minecraft.enchant.sweeping=Разящий клинок
+minecraft.enchant.thorns=Шипы
+minecraft.enchant.unbreaking=Прочность
+minecraft.enchant.vanishing=Проклятие исчезновения 
 missing_args=Не достаточно параметров.
 missing_converter=У параметра типа {0} нет зарегестрированного преобразователя
-toolbinding.caught.duplicate=У этого предмета уже есть привязка к орудию
-toolbinding.caught.block=Орудие не может быть привязоно к блокам
-toolbinding.caught.hand=Орудие не может быть привязано к руке
-worldmanagement.unloader.blacklist.failed=$2{0} $1не может быть занесено в черный список, вы уверены, что оно существует?
-worldmanagement.unloader.blacklist.added=$2{0} $1был добавлен в черный список и всегда будет загружен
-playeractions.spectator.notallowed=$4Вы не можете телепортироватся в режиме наблюдателя
+oldplots.caught.calculation=$4Не удалось вычислить местоположения участка 
+oldplots.caught.location=$4Никакая локация мира не настроена для '{0}'
+oldplots.caught.player=$4Не предоставлен действительный игрок
+oldplots.caught.plot=$4Не удалось найти участок с этим ID 
+oldplots.caught.worlds=$4Миры не хранятся как OldPlots
+oldplots.list.hover=$2Телепортироватся к $1{0}$2, $1{1}, {2}
+oldplots.list.title=$1OldPlots для $2{0}
+playeractions.lang.notify.hover=$1Нажмите сюда, чтобы изменить ваш предпочитаемый язык на $2{0}
+playeractions.lang.notify=$1Привет! Мы установили, что вы предпочитаете просматривать сообщения в {0}, если вы бы хотели, что бы наши команды отправляли вам сообщения в {0}, нажмите на это сообщение чтобы изменить ваш предпочитаемый язык.
 playeractions.plot.denied=$4Вам было отказано в посещении участка, на который вы телепортируетесь
 playeractions.plot.interact=$4Здесь вы не можете взаимодействовать с сущностями
 playeractions.plot.outside=$4Вы вне участка
 playeractions.rootworld=$4Вам не разрешено перемещатся в этом мире
-discord.command.not.permitted=Вам не разрешено использовать эту команду!
-discord.command.unknown=Извините, я не знаю эту команду!
-discord.command.caught=Извините, я не смог запустить эту команду. Пожалуйсто сообщите в наш канал поддержки, Support.
-caught.command.missingargs=$4Эта команда требует параметры
-confirm.message.hover=$1Подтвердите запуск команды
-confirm.message=$1Эта команда требует подтверждения, нажмите $2[here] $1чтобы подтвердить
-playeractions.lang.notify=$1Привет! Мы установили, что вы предпочитаете просматривать сообщения в {0}, если вы бы хотели, что бы наши команды отправляли вам сообщения в {0}, нажмите на это сообщение чтобы изменить ваш предпочитаемый язык.
-playeractions.lang.notify.hover=$1Нажмите сюда, чтобы изменить ваш предпочитаемый язык на $2{0}
-settings.notifications=Получать уведомления
-settings.notifications.description=Чтобы получать уведомления от сервера, например когда вы измените ваши личные языковые настройки .
-settings.language=Язык
-settings.language.description=Язык, на котором вам показываются сообщения.
-yes=Да
-no=Нет
-settings=$1Настройки
+playeractions.spectator.notallowed=$4Вы не можете телепортироватся в режиме наблюдателя
+source.unknown=Неизвестно
+toolbinding.caught.block=Орудие не может быть привязоно к блокам
+toolbinding.caught.duplicate=У этого предмета уже есть привязка к орудию
+toolbinding.caught.hand=Орудие не может быть привязано к руке
+worldmanagement.unloader.blacklist.added=$2{0} $1был добавлен в черный список и всегда будет загружен
+worldmanagement.unloader.blacklist.failed=$2{0} $1не может быть занесено в черный список, вы уверены, что оно существует?
