--- a/hartshorn-i18n/src/main/resources/hartshorn/translations_fr.properties
+++ b/hartshorn-i18n/src/main/resources/hartshorn/translations_fr.properties
@@ -15,94 +15,93 @@
 # along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
 #
 
-minecraft.enchant.infinity=Infinité
-minecraft.enchant.protection.projectile=Protection contre les projectiles
-minecraft.enchant.knockback=Recul
-minecraft.enchant.protection.fire=Protection contre le feu
-minecraft.enchant.depthstrider=Agilité aquatique
-minecraft.enchant.aquaaffinity=Affinité aquatique
-minecraft.enchant.featherfalling=Chute amortie
-minecraft.enchant.sealuck=Chance de la mer
-minecraft.enchant.protection.blast=Protection contre les explosions
-minecraft.enchant.baneofarthopods=Fléau des arthropodes
-minecraft.enchant.binding=Malédiction du lien éternel
-minecraft.enchant.fireaspect=Aura de feu
-minecraft.enchant.vanishing=Malédiction de disparition
-minecraft.enchant.protection=Protection
-minecraft.enchant.lure=Appât
-minecraft.enchant.mending=Raccommodage
-minecraft.enchant.respiration=Apnée
-minecraft.enchant.smite=Châtiment
-minecraft.enchant.looting=Butin
-minecraft.enchant.sharpness=Tranchant
-minecraft.enchant.thorns=Épines
-minecraft.enchant.flame=%1$s a péri dans les flammes
-minecraft.enchant.power=Puissance
-minecraft.enchant.sweeping=Affilage
-minecraft.enchant.unbreaking=Solidité
-minecraft.enchant.efficiency=Efficacité
-minecraft.enchant.punch=Frappe
-minecraft.enchant.frostwalker=Semelles givrantes
-minecraft.enchant.fortune=Fortune
-minecraft.enchant.silktouch=Toucher de soie
-caught=$4une erreur s'est produite. $3{0}
-source.unknown=Inconnue
-caught.reference.lost=$4Référence d'objet perdue
 caught.failedbinding=$4Ne peut s'appliquer à ce genre
-source.none=Aucun
-oldplots.caught.calculation=$4Impossible de calculer l'emplacement du plot
-oldplots.list.hover=$2Téléportation vers $1{0}$2, $1{1}, {2}
-oldplots.caught.plot=$4Aucun plot avec cet ID n'a été trouvé
-oldplots.caught.worlds=$4Les mondes ne sont pas stockés en tant qu’anciens plots
-oldplots.caught.player=$4Le nom de joueur fourni n'est pas valide
-oldplots.caught.location=$4Aucun emplacement dans le monde n'a été défini pour'{0}'
-oldplots.list.title=$1Ancients plot pour $2{0}
+caught.reference.lost=$4Référence d'objet perdue
+caught=$4une erreur s'est produite. $3{0}
+command.confirm.hover=$1Confirmer la commande en cours
+command.confirm=$1Cette commande nécessite une confirmation, cliquez $2[here] $1pour confirmer
+command.cooldown=veuillez patienter
+command.flag.unknown=indicateur inconnu '{0}'
+command.illegal=Définition d'argument illégal
+command.missing.arguments=$4Cette commande nécessite des arguments
+command.missing.executor=aucun exécuteur n'est enregistré pour cette commande '{0}' avec {1} arguments
+command.missing.handler=Aucun gestionnaire de commandes pris en charge n'a pu être trouvé pour '{0}'
+command.overflow=$4Trop d'arguments
+command.parameter.missing.arguments=$4Pas assez d'arguments pour ce paramètre '{0}'
+command.parse.failure=Could not parse {0} '{1}'
+dave.mute=$4Dave est maintenant muet, notez que les déclencheurs importants s'afficheront toujours
+dave.reload=$1Hourra,Dave a rechargé sans erreur !
 dave.suggestion.link.hover=$2Cliquez pour ouvrir $1{0}
+dave.suggestion.link=Voici un lien utile, $1{0}
+dave.trigger.header=$1Déclencheurs
 dave.trigger.notfound=$4Le déclencheur avec cet ID '{0}' n'existe pas
 dave.trigger.single.hover=$1Cliquez pour exécuter le déclencheur
-dave.suggestion.link=Voici un lien utile, $1{0}
 dave.unmute=$1Dave est réactivé
-dave.reload=$1Hourra,Dave a rechargé sans erreur !
-dave.trigger.header=$1Déclencheurs
-dave.mute=$4Dave est maintenant muet, notez que les déclencheurs importants s'afficheront toujours
-dave.trigger.single=$3 - $1{0}
-hartshorn.reload.single=$1Rechargé avec succès '$2{0}$1'
-hartshorn.info.module.unknown=$4Impossible de trouver le module avec ID '{0}'
-i18n.lang.updated.other=$1La langue de préférence pour $2{0} $1à été mise à jour par: $2{1}
-hartshorn.confirm.invalid.id=$4Impossible de confirmer la commande: Aucune trace de cette commande
-i18n.lang.updated=$1Votre langue de préférence à été mise à jour par: $2{0}
-hartshorn.confirm.invalid.other=$4Impossible de confirmer la commande
-hartshorn.info.module.hover=$2Détails pour '$1{0}$2'
+discord.command.caught=Sorry, I could not start that command. Please report this in our support channel.
+discord.command.not.permitted=Vous n'avez pas la permission d'utiliser cette commande !
+discord.command.unknown=Désolé, je ne sais que faire de cette commande
 hartshorn.confirm.invalid.source=$4Cette commande ne peut être utilisée que par des sources identifiables (lecteurs, consoles) qui correspondent à la source d'origine
-hartshorn.info.parameter.missing=$4Valeur manquante pour l'argument '{0}'
+hartshorn.info.header=$2Hartshorn $3($1Version$3: $1{0}$3)
+hartshorn.info.service.hover=$2Détails pour '$1{0}$2'
+hartshorn.info.service.unknown=$4Could not find service with ID '{0}'
+hartshorn.info.services=$2Services$3:
 hartshorn.invalid.source=$4Cette commande ne peut être utilisée que par les joueurs
-hartshorn.info.module.row=$3 - $1{0} $3- $2{1}
-hartshorn.reload.single.fail=$4Échec du rechargement '{0}'
+hartshorn.pagination.title=$1Hartshorn Server Info
 hartshorn.reload.all=$1Tous les modules ont été rechargés avec succès
+hartshorn.reload.single.fail=$4Échec du rechargement '{0}'
+hartshorn.reload.single=$1Rechargé avec succès '$2{0}$1'
 hashtag.wrong_format=Le motif doit être formaté comme #type[arg1][arg2][etc.]
+i18n.lang.updated.other=$1La langue de préférence pour $2{0} $1à été mise à jour par: $2{1}
+i18n.lang.updated=$1Votre langue de préférence à été mise à jour par: $2{0}
+minecraft.enchant.aquaaffinity=Affinité aquatique
+minecraft.enchant.baneofarthopods=Fléau des arthropodes
+minecraft.enchant.binding=Malédiction du lien éternel
+minecraft.enchant.depthstrider=Agilité aquatique
+minecraft.enchant.efficiency=Efficacité
+minecraft.enchant.featherfalling=Chute amortie
+minecraft.enchant.fireaspect=Aura de feu
+minecraft.enchant.flame=%1$s a péri dans les flammes
+minecraft.enchant.fortune=Fortune
+minecraft.enchant.frostwalker=Semelles givrantes
+minecraft.enchant.infinity=Infinité
+minecraft.enchant.knockback=Recul
+minecraft.enchant.looting=Butin
+minecraft.enchant.lure=Appât
+minecraft.enchant.mending=Raccommodage
+minecraft.enchant.power=Puissance
+minecraft.enchant.protection.blast=Protection contre les explosions
+minecraft.enchant.protection.fire=Protection contre le feu
+minecraft.enchant.protection.projectile=Protection contre les projectiles
+minecraft.enchant.protection=Protection
+minecraft.enchant.punch=Frappe
+minecraft.enchant.respiration=Apnée
+minecraft.enchant.sealuck=Chance de la mer
+minecraft.enchant.sharpness=Tranchant
+minecraft.enchant.silktouch=Toucher de soie
+minecraft.enchant.smite=Châtiment
+minecraft.enchant.sweeping=Affilage
+minecraft.enchant.thorns=Épines
+minecraft.enchant.unbreaking=Solidité
+minecraft.enchant.vanishing=Malédiction de disparition
 missing_args=Pas assez d'arguments.
 missing_converter=Paramètre de type {0} n'a pas de convertisseur enregistré
-toolbinding.caught.duplicate=Un outil lié à cet élément existe déjà
-toolbinding.caught.block=L'outil ne peut être lié à des blocs
-toolbinding.caught.hand=L'outil ne peut être lié à la main
-worldmanagement.unloader.blacklist.failed=$2{0} $1N'a pas pu petre mis sur liste noir, êtes-vous sûr de son existence?
-worldmanagement.unloader.blacklist.added=$2{0} $1a été ajouté à la liste noire et ne sera pas déchargé
-playeractions.spectator.notallowed=$4Vous n'êtes pas autorisé à vous téléporter en mode spectateur
+oldplots.caught.calculation=$4Impossible de calculer l'emplacement du plot
+oldplots.caught.location=$4Aucun emplacement dans le monde n'a été défini pour'{0}'
+oldplots.caught.player=$4Le nom de joueur fourni n'est pas valide
+oldplots.caught.plot=$4Aucun plot avec cet ID n'a été trouvé
+oldplots.caught.worlds=$4Les mondes ne sont pas stockés en tant qu’anciens plots
+oldplots.list.hover=$2Téléportation vers $1{0}$2, $1{1}, {2}
+oldplots.list.title=$1Ancients plot pour $2{0}
+playeractions.lang.notify.hover=$1Cliquez ici pour changer votre préférence de langue en $2{0}
+playeractions.lang.notify=$1Salut! Nous avons détecté que vous préférez voir les messages en {0}, si vous souhaitez que nos commandes vous envoient des messages en{0}cliquez sur ce message pour changer la langue d'affichage. 
 playeractions.plot.denied=$4L'accès au plot auquel vous tentez de vous téléporter vous est refusé
 playeractions.plot.interact=$4Vous n'êtes pas autorisé à interagir avec les entités ici
 playeractions.plot.outside=$4Vous êtes en dehors d'un plot
 playeractions.rootworld=$4Vous n'avez pas la permission de vous déplacer dans ce monde
-discord.command.not.permitted=Vous n'avez pas la permission d'utiliser cette commande !
-discord.command.unknown=Désolé, je ne sais que faire de cette commande
-caught.command.missingargs=$4Cette commande nécessite des arguments
-confirm.message.hover=$1Confirmer l'exécution de cette commande
-confirm.message=$1Cette commande nécessite une confirmation, cliquez $2[ici] $1pour confirmer
-playeractions.lang.notify=$1Salut! Nous avons détecté que vous préférez voir les messages en  {0}, si vous souhaitez que nos commandes vous envoient des messages en{0}cliquez sur ce message pour changer la langue d'affichage. 
-playeractions.lang.notify.hover=$1Cliquez ici pour changer votre préférence de langue en  $2{0}
-settings.notifications=Recevoir des notifications 
-settings.notifications.description=Si vous souhaitez recevoir les notifications du serveur, par exemple lorsque vous modifiez vos préférences de langue côté client. 
-settings.language=Langue
-settings.language.description=La langue dans laquelle les messages vous sont affichés. 
-yes=Oui
-no=Non
-settings=$1Paramètres
+playeractions.spectator.notallowed=$4Vous n'êtes pas autorisé à vous téléporter en mode spectateur
+source.unknown=Inconnue
+toolbinding.caught.block=L'outil ne peut être lié à des blocs
+toolbinding.caught.duplicate=Un outil lié à cet élément existe déjà
+toolbinding.caught.hand=L'outil ne peut être lié à la main
+worldmanagement.unloader.blacklist.added=$2{0} $1a été ajouté à la liste noire et ne sera pas déchargé
+worldmanagement.unloader.blacklist.failed=$2{0} $1N'a pas pu être mis sur liste noire, êtes-vous sûr de son existence?
