#289 Bump DE_CH (German, Switzerland) to batch 26062021

--- a/hartshorn-i18n/src/main/resources/hartshorn/translations_de_ch.properties
+++ b/hartshorn-i18n/src/main/resources/hartshorn/translations_de_ch.properties
@@ -14,103 +14,95 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
 #
-minecraft.enchant.infinity=Infinity
-minecraft.enchant.protection.projectile=Projectile Protection
-minecraft.enchant.knockback=Knockback
-minecraft.enchant.protection.fire=Fire Protection
-minecraft.enchant.depthstrider=Depth Strider
-minecraft.enchant.aquaaffinity=Aqua Affinity
-minecraft.enchant.featherfalling=Feather Falling
-minecraft.enchant.sealuck=Luck Of The Sea
-minecraft.enchant.protection.blast=Blast Protection
-minecraft.enchant.baneofarthopods=Bane Of Arthropods
-minecraft.enchant.binding=Binding Curse
-minecraft.enchant.fireaspect=Fire Aspect
-minecraft.enchant.vanishing=Vanishing Curse
-minecraft.enchant.protection=Protection
-minecraft.enchant.lure=Lure
-minecraft.enchant.mending=Mending
-minecraft.enchant.respiration=Respiration
-minecraft.enchant.smite=Smite
-minecraft.enchant.looting=Looting
-minecraft.enchant.sharpness=Sharpness
-minecraft.enchant.thorns=Thorns
-minecraft.enchant.flame=Flame
-minecraft.enchant.power=Power
-minecraft.enchant.sweeping=Sweeping
-minecraft.enchant.unbreaking=Unbreaking
-minecraft.enchant.efficiency=Efficiency
-minecraft.enchant.punch=Punch
-minecraft.enchant.frostwalker=Frost Walker
-minecraft.enchant.fortune=Fortune
-minecraft.enchant.silktouch=Silk Touch
-hartshorn.exception=$4{0}
-prefix=$3[] $1
-caught=$4An error occurred. $3{0}
-source.unknown=Unknown
-caught.reference.lost=$4Reference to object lost
-caught.failedbinding=$4Cannot apply to this type
-source.none=None
-oldplots.caught.calculation=$4Could not calculate plot location
-oldplots.list.hover=$2Teleport to $1{0}$2, $1{1}, {2}
-oldplots.list.single=$3 - $1{0}$2, $1{1}, {2}
-oldplots.caught.plot=$4No plot with that ID found
-oldplots.caught.worlds=$4Worlds are not stored as OldPlots
-oldplots.caught.player=$4No valid player provided
-oldplots.caught.location=$4No world location configured for '{0}'
-oldplots.list.title=$1OldPlots for $2{0}
-dave.suggestion.link.hover=$2Click to open $1{0}
-dave.trigger.notfound=$4No trigger with id '{0}' exists.
-dave.trigger.single.hover=$1Click to perform trigger
-dave.suggestion.link=Here's a useful link, $1{0}
-dave.unmute=$1Unmuted Dave
-dave.reload=$1Reloaded Dave without breaking stuff, whoo!
-dave.trigger.header=$1Triggers
-dave.discord.format=**Dave** ≫ {0}
-dave.mute=$4Muted Dave, note that important triggers will always show
-dave.trigger.single=$3 - $1{0}
-hartshorn.reload.single=$1Successfully reloaded '$2{0}$1'
-hartshorn.info.service.unknown=$4Could not find service with ID '{0}'
-i18n.lang.updated.other=$1The language preference for $2{0} $1has been switched to: $2{1}
-hartshorn.confirm.invalid.id=$4Could not confirm command: Invalid runner ID
-i18n.lang.updated=$1Your preferred language has been switched to: $2{0}
-hartshorn.confirm.invalid.other=$4Could not confirm command
-hartshorn.info.service.hover=$2Details for '$1{0}$2'
-hartshorn.confirm.invalid.source=$4This command can only be used by identifiable sources (players, console) matching the original source of the command
-hartshorn.info.parameter.missing=$4Missing value for argument '{0}'
-hartshorn.pagination.title=$1Hartshorn Server Info
-hartshorn.info.authors=$2Authors$3: $1{0}
-hartshorn.info.services=$2Services$3:
-hartshorn.info.header=$2Hartshorn $3($1Version$3: $1{0}$3)
-hartshorn.invalid.source=$4This command can only be used by players
-hartshorn.info.service.row=$3 - $1{0} $3- $2{1}
-hartshorn.reload.single.fail=$4Failed to reload '{0}'
-hartshorn.reload.all=$1Successfully reloaded all services
-hashtag.wrong_format=Pattern has to be formatted as #type[arg1][arg2][etc.]
-missing_args=Not enough arguments.
-missing_converter=Parameter of type {0} has no registered converter
-toolbinding.caught.duplicate=There is already a tool bound to this item
-toolbinding.caught.block=Tool cannot be bound to blocks
-toolbinding.caught.hand=Tool cannot be bound to hand
-worldmanagement.unloader.blacklist.failed=$2{0} $1could not be blacklisted, are you sure it exists?
-worldmanagement.unloader.blacklist.added=$2{0} $1was added to the blacklist and will not be unloaded
-playeractions.spectator.notallowed=$4You are not allowed to teleport while in spectator mode
-playeractions.plot.denied=$4You are denied from the plot you are teleporting to
-playeractions.plot.interact=$4You do not have permission to interact with entities here
-playeractions.plot.outside=$4You are outside a plot
-playeractions.rootworld=$4You are not permitted to move in this world
-discord.command.not.permitted=You are not permitted to use that command!
-discord.command.unknown=Sorry, I don't know what to do with that command!
-discord.command.caught=Sorry, I could not start that command. Please report this in our support channel.
-caught.command.missingargs=$4The command requires arguments
-confirm.message.hover=$1Confirm running command
-confirm.message=$1This command requires confirmation, click $2[here] $1to confirm
-playeractions.lang.notify=$1Hi there! We detected you prefer to see messages in {0}, if you would like our commands to send you messages in {0} click on this message to change your language preference.
-playeractions.lang.notify.hover=$1Click here to change your language preference to $2{0}
-settings.notifications=Receive notifications
-settings.notifications.description=Whether to receive server notifications, for example when you change your client-side language preferences.
-settings.language=Language
-settings.language.description=The language in which messages are displayed to you.
-yes=Yes
-no=No
-settings=$1Settings
+
+minecraft.enchant.infinity=Unendlichkit
+minecraft.enchant.protection.projectile=Projektil schutz
+minecraft.enchant.knockback=Rückstoss
+minecraft.enchant.protection.fire=Füer schutz
+minecraft.enchant.depthstrider=Tiefe schrieter
+minecraft.enchant.aquaaffinity=Wasserverwandschaft
+minecraft.enchant.featherfalling=Feder fall
+minecraft.enchant.sealuck=Glückch der see
+minecraft.enchant.protection.blast=Explosions schutz
+minecraft.enchant.baneofarthopods=Fluach de spinnen
+minecraft.enchant.binding=Bindungs fluach
+minecraft.enchant.fireaspect=Füer aspekcht
+minecraft.enchant.vanishing=Verschwindings fluach
+minecraft.enchant.protection=Schutz
+minecraft.enchant.lure=Lokche
+minecraft.enchant.mending=Verbessern
+minecraft.enchant.respiration=Atmig
+minecraft.enchant.smite=Schlägle
+minecraft.enchant.looting=Plündere
+minecraft.enchant.sharpness=Schärfe
+minecraft.enchant.thorns=Dorne
+minecraft.enchant.flame=Füer
+minecraft.enchant.power=Kraft
+minecraft.enchant.sweeping=Schwungvoll
+minecraft.enchant.unbreaking=Unbreachbar
+minecraft.enchant.efficiency=Effizenz
+minecraft.enchant.punch=Slage
+minecraft.enchant.frostwalker=Froscht lüfer
+minecraft.enchant.fortune=Glückch
+minecraft.enchant.silktouch=Seiden berührig
+caught=$4En fähler isch passiert. $3{0}
+source.unknown=Unbekannt
+caught.reference.lost=$4Hinweise uf des objekcht sind verlore
+caught.failedbinding=$4Das chasch nöt hieruf awende
+source.none=Nüt
+oldplots.caught.calculation=$4Die plotposition konnte net berechnet werde
+oldplots.list.hover=$2Teleportiere zu $1{0}$2, $1{1}, {2}
+oldplots.caught.plot=$4Kei plot unter där ID gefunne
+oldplots.caught.worlds=$4Welt isch nöt gespiechert als OldPlots
+oldplots.caught.player=$4Wei gültiger spieler agegebe
+oldplots.caught.location=$4Kei weltstandort konfiguriert für '{0}'
+oldplots.list.title=$1OldPlots für $2{0}
+dave.suggestion.link.hover=$2Klikch zum öffne $1{0}
+dave.trigger.notfound=$4Kei trigger mit der id '{0}' exischtiert.
+dave.trigger.single.hover=$1Klikch um de trigger uszufüre
+dave.suggestion.link=Hier isch an nützlicher linkch, $1{0}
+dave.unmute=$1Ufhebig der stummschaltig für Dave
+dave.reload=$1Dave neu gelade ohne öpis zu zerstöre, whoo!
+dave.mute=$4Stumgeschaltener Dave, beachte dass du wichtige uslöser immer agezeigt werde
+hartshorn.reload.single=$1Erfolgich nachgelade '$2{0}$1'
+hartshorn.info.service.unknown=$4Konnte nöt de service mit der ID '{0}'
+i18n.lang.updated.other=$1Die sprach preference für $2{0} $1wurde geändert zu: $2{1}
+hartshorn.confirm.invalid.id=$4Konnte den befehl net bestätige: falschi runner ID
+i18n.lang.updated=$1Dini beforzugti sprachi wurde geändert zu: $2{0}
+hartshorn.confirm.invalid.other=$4Konnte den befehl net bestätige
+hartshorn.info.service.hover=$2Details für '$1{0}$2'
+hartshorn.confirm.invalid.source=$4Dieser befehl cha nur vo identifizierte quelle genutzt werde (spieler, console) welche die originale quelle des befehls glich
+hartshorn.info.parameter.missing=$4Es fehle die werti für des argument '{0}'
+hartshorn.info.authors=$2Authore$3: $1{0}
+hartshorn.info.services=$2Dienstleischrig$3:
+hartshorn.invalid.source=$4Dieser befehl cha nur vo spielern genutzt werde
+hartshorn.reload.single.fail=$4Neuleadeversuch fehlgeschlage '{0}'
+hartshorn.reload.all=$1Erfolgreicher neuladeversuch aller eigeschafte 
+hashtag.wrong_format=Muschter muss formatiert werde als #type[arg1][arg2][etc.]
+missing_args=Net genug argumente.
+missing_converter=Parameter vom typ {0} hät keine regischtrierte Konverter
+toolbinding.caught.duplicate=Es werkzüg isch schon en dem objekcht gebunde
+toolbinding.caught.block=Werkzüg cha nöt an den block gebunde werde
+toolbinding.caught.hand=Werkzüg cha nöt an die hand gebunde werde
+worldmanagement.unloader.blacklist.failed=$2{0} $1cha nöt uf die schwarzi lischti gesetzt werde, bist du dir sicher dass das exischtiert?
+worldmanagement.unloader.blacklist.added=$2{0} $1wurde zur schwarzen lischti hinzugefügt und wird nöt mehr entlade
+playeractions.spectator.notallowed=$4Du chasch dich net im beobachtungsmodus teleportiere
+playeractions.plot.denied=$4Du bisch vo dem plot gesperrt zu dem du dich teleportiere wotsch
+playeractions.plot.interact=$4Du häsch keini berechtigung um hier mit entities zu interagiere
+playeractions.plot.outside=$4Du bisch userhalb vom plot
+playeractions.rootworld=$4Du darfsch dich nöt in dieser welt bewege
+discord.command.not.permitted=Du bisch nöt erlaubt den befehl zu nutze!
+discord.command.unknown=Entschuldige, aber ich weis nöt was ich mit dem befehl mache soll!
+discord.command.caught=Entschuldige, ich chonnte den befehl net usführe. bitte geb das dem support channel witer.
+caught.command.missingargs=$4Der befehl benötigt argumente
+confirm.message.hover=$1Bestätige den laufenden befehl
+confirm.message=$1Dieser befehl benötigt eini bestätigung, klickch $2[here] $1zum bestätige
+playeractions.lang.notify=$1Grüzi! Wir händ mitbecho das sie nachrichte lieber in {0} becho wönnt, wenn sie möchte dass unsere befehle ihne nachrichte in {0} sende klickche sie uf diese nachricht um ihre sprachistellge zu ändere.
+playeractions.lang.notify.hover=$1Klickch hier, um dini spracheinstelling zu ändere in $2{0}
+settings.notifications=Benachrichtigung becho
+settings.notifications.description=Ob sie serverbenachrichtigunge erhalte wönnt, beispielswiesi wenn sie ihre clientseitige sprachistellige ändere.
+settings.language=Sprachi
+settings.language.description=Die sprachi in welli du nachrichte liesischt bzw bechomsch.
+yes=Jo
+no=Nei
+settings=$1Iestellige
